--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="" />
   <title>Shaeakh Ahmed Chowdhury </title>
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="style.css" />
 
   <!--- google font link-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -401,7 +401,7 @@
   </footer>
 
   <!--- custom js link-->
-  <script src="./script.js"></script>
+  <script src="script.js"></script>
 
   <!--- ionicon link-->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
