scroll down feature added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="flex-wrapper">
           <ul class="desktop-nav">
             <li><a href="#" class="nav-link">Home</a></li>
-            <li><a href="#" class="nav-link">About</a></li>
+            <li><a href="#" class="nav-link" onclick="scrollToDown()" >About</a></li>
             <li><a href="#" class="nav-link">Projects</a></li>
             <li><a href="#" class="nav-link">Achievements</a></li>
             <li><a href="#" class="nav-link">Blogs</a></li>
@@ -78,7 +78,7 @@
           </div>
 
           <div>
-            <p class="h3 nav-title">Topics</p>
+            <p class="h3 nav-title">Interests</p>
 
             <ul>
               <li class="nav-item"><a href="#" class="nav-link">Database Projects</a></li>    
@@ -273,7 +273,7 @@
 
         <div class="aside" >
           <div class="topics">
-            <h2 class="h2">Topics</h2>
+            <h2 class="h2">Interests</h2>
 
             <a href="#" class="topic-btn">
               <div class="icon-box">
@@ -369,16 +369,9 @@
   -->
 
   <footer>
+    <h1  classname="Aboutme" style="text-align: center;">About me</h1>
+    <hr style="width: 80%; margin: 0 auto  ;">
     <div class="container">
-
-      <div class="wrapper">
-        <p class="footer-text">
-          Everything that has been created in the world till date 
-          has taken a long time to be created. 
-          I believe good work requires good time, effort and talent.
-        </p>
-      </div>
-
       <div class="wrapper">
         <p class="footer-title">Socials</p>
 
