--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <li><a href="#" class="nav-link">Home</a></li>
             <li><a href="#" class="nav-link" onclick="scrollToDown()" >About Me</a></li>
             <li><a href="#" class="nav-link">Projects</a></li>
-            <li><a href="#" class="nav-link">Achievements</a></li>
-            <li><a href="#" class="nav-link">Blogs</a></li>
-            <li><a href="#" class="nav-link">Contacts</a></li>             
+            <li><a href="#" class="nav-link">Problem-Solving</a></li>
+            <li><a href="#" class="nav-link">Experiences</a></li>            
+            <li><a href="#" class="nav-link" onclick="scrollToDown()">Contacts</a></li>             
           </ul>
 
           <button class="theme-btn theme-btn-desktop light">
@@ -111,8 +111,7 @@
               class="btn btn-primary">Contact Me
               <ion-icon name="call"></ion-icon>
             </a>
-            <a href="#" target="_blank"
-              class="btn btn-secondary">Download CV
+            <a href="./assets/CV.pdf" download="Shaeakh Ahmed Chowdhury.pdf" class="btn btn-secondary">Download CV
               <ion-icon name="cloud-download-sharp"></ion-icon>
             </a>
           </div>
