--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="left">
           <h1 class="h1">
-            Hi, I'm <b>Shaeakh Ahmed Chowdhury </b> <br />Web Developer
+            Hi, I'm <b>Shaeakh Ahmed Chowdhury </b> 
           </h1>
 
           <p class="h3">Student at : Software Engineering, Shahjalal University of Science and Technology </p>
@@ -908,7 +908,7 @@
       </div>      
       <div class="wrapper" style="width: 30%;" >
         <div class="career">
-          <h3 class="title">Career</h3>
+          <h3 class="title">Career Goals</h3>
 
             <div class="eduItem">              
               <h4 class="itemTitle">Intern</h4>
