--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <li>
                 <div class="blog-card">
                   <div class="blog-card-banner">
-                    <img src="/assets/project/androidProject250.jpg.png" alt="BookHub" class="blog-banner-img" />
+                    <img src="assets/project/androidProject250.jpg.png" alt="BookHub" class="blog-banner-img" />
                   </div>
     
                   <div class="blog-content-wrapper">
@@ -220,7 +220,7 @@
               <li>
                 <div class="blog-card">
                   <div class="blog-card-banner">
-                    <img src="/assets/project/Nasa Space Apps.jpg" alt="to do app" class="blog-banner-img" />
+                    <img src="assets/project/Nasa Space Apps.jpg" alt="Nasa Space Apps" class="blog-banner-img" />
                   </div>
     
                   <div class="blog-content-wrapper">
@@ -627,7 +627,7 @@
             <h2 class="h2">Experiences</h2>
             <div class="blog-card">
               <div class="blog-card-banner">
-                <img src="/assets/project/CSE carnival.jpg" alt="CSE carnival" width="250" class="blog-banner-img" />
+                <img src="assets/project/CSE carnival.jpg" alt="CSE carnival" width="250" class="blog-banner-img" />
               </div>
 
               <div class="blog-content-wrapper">
@@ -660,7 +660,7 @@
 
             <div class="blog-card">
               <div class="blog-card-banner">
-                <img src="/assets/project/Exp Nasa Space Apps.jpg" alt="Nasa Space Apps" width="250" class="blog-banner-img" />
+                <img src="assets/project/Exp Nasa Space Apps.jpg" alt="Nasa Space Apps" width="250" class="blog-banner-img" />
               </div>
 
               <div class="blog-content-wrapper">
@@ -694,7 +694,7 @@
             </div> 
             <div class="blog-card">
               <div class="blog-card-banner">
-                <img src="/assets/project/KIBORPC.jpg" alt="KIBO RPC" width="250" class="blog-banner-img" />
+                <img src="assets/project/KIBORPC.jpg" alt="KIBO RPC" width="250" class="blog-banner-img" />
               </div>
 
               <div class="blog-content-wrapper">
@@ -726,7 +726,7 @@
             </div> 
             <div class="blog-card">
               <div class="blog-card-banner">
-                <img src="/assets/project/ICPC.jpg" alt="ICPC 2022" width="250" class="blog-banner-img" />
+                <img src="assets/project/ICPC.jpg" alt="ICPC 2022" width="250" class="blog-banner-img" />
               </div>
 
               <div class="blog-content-wrapper">
